k8s/resultserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resultserver-svc
spec:
  selector:
    app: resultserver-deploy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
      protocol: TCP
  type: NodePort
